# Optimising-2D-Convolution

./: README.md  tut_notes
src/: CMakeLists.txt  main.cpp
tester/: tester.cpp
